--- a/style.css
+++ b/style.css
@@ -84,12 +84,15 @@ main{
     margin: 72px 0 0 0;
 }
 .infoPersonal{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template: repeat(4,100px)/2 1fr;
     align-items: center;
     margin: 15px 0 15px 0;
     gap: 15px;
+    justify-items: center;
+    justify-self: center;
 }
+
 .infoPersonal__titulo{
     
     text-align: center;
@@ -302,11 +305,14 @@ main{
     font-size: 2.5rem;
 }
 .todos-proyectos{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template: 2 1fr/ 2 1fr;
     justify-content: center;
+    justify-items: center;
     align-items: center;
+
 }
+
 .proyecto__a{
     text-decoration: none;
 }
@@ -481,6 +487,7 @@ footer{
 @media (min-width:420px){
     .infoPersona{
         padding: 30px 0 0 0;
+        
     }
     .subtitulo-fecha{
         flex-direction: row;
@@ -502,7 +509,16 @@ footer{
     .menu-mobile__list{
         display: none;
     }
+    
 }
+
+@media (min-width:550px) {
+    .todos-proyectos{
+        grid-auto-flow: row;
+        grid-template: repeat(2, 1fr) /repeat(2, 1fr);
+    }
+}
+
 @media (min-width:720px) {
     header{
         position:fixed;
@@ -526,10 +542,13 @@ footer{
     
     }
     .infoPersonal{
-        flex-direction: row;
+        grid-auto-flow: row;
+        grid-template: 1fr 120px/repeat(2,1fr);
         width: 100%;
-        justify-content: center;
-        margin: 120px 10px 50px 10px;
+        margin: 0 10px 50px 0;
+    }
+    .infoPersonal__flecha-desktop{
+        grid-area: 2/1/3/3;
     }
     .infoPersonal__contenido{
         display: flex;
@@ -559,11 +578,14 @@ footer{
     .proyecto__conteiner{
         flex-direction: column;
     }
-    .todos-proyectos{
-        display: flex;
-        flex-direction: row;
-    }
+    
     .menu-mobile__list{
         display: none;
+    }
+}
+@media (min-width:1000px) {
+    .todos-proyectos{
+        grid-auto-flow: row;
+        grid-template: repeat(2, 1fr) /repeat(3, 1fr);
     }
 }
